# MorfiConvert

./: CMakeLists.txt  LICENSE  README.md  cppan.yml  main.cpp
src/: CMakeLists.txt  GeneData.cpp  GeneData.h  compressGene.cpp  compressGene.h  file2Obj.cpp  file2Obj.h  geneComplete.cpp  geneComplete.h  geneFragment.cpp  geneFragment.h  identifyMorfi.cpp  identifyMorfi.h  image2Text.cpp  image2Text.h  morficonvert.cpp  morficonvert.h  obj2File.cpp  obj2File.h  obj2Obj.cpp  obj2Obj.h  supplimentMorfi.cpp  supplimentMorfi.h
src/include/json/: CMakeLists.txt
tests/: CMakeLists.txt  TestMorfi.cpp  file2ObjTest.cpp
tests/Tests/EBI Data/: Clustral.txt  EMBL.txt  FASTARes.txt  GCG.txt  GenBank.txt  MSF.txt  PHYLIPD.txt  PIR.txt  PIRn.txt
tests/Tests/Protien/FASTA/: Test1.txt
tests/Tests/Protien/Invalid/: Test1.json  Test1.txt  Test1.xml
tests/Tests/Protien/MSA Text/: Test1.txt
tests/Tests/Protien/Results/: Test1Full.txt  Test1Given.txt
tests/Tests/Protien/Single/: Test1.txt
tests/Tests/Protien/Valid (Custom)/: Test1.txt
tests/Tests/Protien/Valid Hits (NCBI)/: Test1.csv  Test2.txt
tests/Tests/Protien/Valid Total (NCBI)/: Test1.json  Test1.txt  Test1.xml  Test2.gb
